fix large footer padding on smaller screens

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -75,7 +75,7 @@
       }
     }
   }
-  
+
   .contact-item {
     margin-top: ($padding * 6);
 
@@ -99,7 +99,7 @@
 
   ul {
     @extend %clearfix;
-    margin: 130px 0 -30px 0;
+    margin: #{$padding * 6} 0 0 0;
 
     &:after {
       content: ' ';
@@ -108,6 +108,9 @@
       width: 80%;
     }
 
+    @include min-screen($breakpoint-medium) {
+      margin: #{$padding * 12} 0 -30px 0;
+    }
   }
 
   li {
